<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_new_game"
        android:orderInCategory="100"
        android:title="@string/new_game"/>

    <item
        android:id="@+id/menu_config"
        android:orderInCategory="100"
        android:title="@string/config"/>

    <item
        android:id="@+id/menu_share"
        android:orderInCategory="100"
        android:title="@string/share"/>
    
    <item
        android:id="@+id/menu_undo"
        android:orderInCategory="100"
        android:title="@string/undo"/>
    
    <item
        android:id="@+id/menu_redo"
        android:orderInCategory="100"
        android:title="@string/redo"/>
    
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="100"
        android:title="@string/exit"/>
        
            
</menu>